# Pycommerce

./: .env.example  .gitignore  .replit  .workflow-config.json  CHANGELOG.md  CONTRIBUTING.md  ImplementationPlan.md  ImplementationPlan.md.bak  ImplementationPlan_updated.md  LICENSE  README.md  add_advanced_templates.py  add_default_sections.py  api_docs.py  api_documentation.py  api_main.py  api_server.py  app.py  app_factory.py  asgi_wsgi_app.py  assign_product_categories.py  check_order_product_mapping.py  check_page_editor.js  check_syntax.py  create_advanced_pages.py  create_default_templates.py  create_demo_data.py  create_demo_portfolio.py  create_fashion_portfolio.py  create_fashion_services.py  create_missing_products.py  create_outdoor_portfolio.py  create_pages_for_tenant.py  create_test_media.py  create_test_orders.py  create_test_orders_by_status.py  dashboard_demo_data.py  database.py  debug_database.py  debug_frontend.py  (+60 more)
.replit.backup/: alembic.ini  example.py  initialize_db.py  main.py  prestart.py  pyproject.toml  run.py  test_multi_tenant.py  worker.py  wsgi.py
attached_assets/: Pasted--2025-04-06-02-56-59-0000-1718-INFO-Starting-gunicorn-23-0-0-2025-04-06-02-56-59-0000-171-1743908370561.txt  Pasted--2025-04-06-11-24-33-0000-5301-INFO-Starting-gunicorn-23-0-0-2025-04-06-11-24-33-0000-530-1743939266711.txt  Pasted--2025-04-06-13-27-35-0000-17176-INFO-Starting-gunicorn-23-0-0-2025-04-06-13-27-35-0000-17-1743946192540.txt  Pasted--2025-04-06-21-52-03-0000-1146-INFO-Starting-gunicorn-23-0-0-2025-04-06-21-52-03-0000-114-1743976358029.txt  (+150 more)
docs/: index.md  (+9 more)
(+301 files in other folders)
