[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.1",
    "uvicorn[standard]>=0.34.0",
    "flask-wtf>=1.2.2",
    "alembic>=1.15.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "python-jose>=3.4.0",
    "cryptography>=44.0.2",
    "starlette>=0.46.1",
    "openai>=1.70.0",
    "stripe>=12.0.0",
    "pillow>=11.1.0",
    "google-generativeai>=0.8.4",
    "python-dateutil>=2.9.0.post0",
    "psutil>=7.0.0",
    "asyncpg==0.30.0",
]
